--- a/vue/index.html
+++ b/vue/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/vue.js"></script>
     <title>Vue</title>
+    <style>
+        .error{
+            color:red;
+        }
+        .no_error{
+            color:blue;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
@@ -13,6 +21,7 @@
         {{message}}
         <p>Computed reversed message: "{{ reversedMessage }}"</p>
         <p>La suma es: {{ calculatesum(value,3)}}</p>
+        <h1 v-bind:class="{error: p_error, no_error: !p_error}">Esto es un texto</h1>
     </div>
     <script src="js/app.js"></script>
 </body>
