--- a/vue/index.html
+++ b/vue/index.html
@@ -22,6 +22,8 @@
         <p>Computed reversed message: "{{ reversedMessage }}"</p>
         <p>La suma es: {{ calculatesum(value,3)}}</p>
         <h1 v-bind:class="{error: p_error, no_error: !p_error}">Esto es un texto</h1>
+        <h1 v-if="p_error">Verifica si la propiedad es true con if</h1>
+        <h1 v-show="p_error">Verifica si la propiedad es true con show, desaparece con css el elemento</h1>
     </div>
     <script src="js/app.js"></script>
 </body>
