--- a/vue/index.html
+++ b/vue/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <div id="app">
-        <router-link to="/foo">Go to Foo</router-link>
-        <router-link to="/bar">Go to Bar</router-link>
+        <router-link to="/">Home</router-link>
+        <router-link to="/Lists">List</router-link>
         <!-- component matched by the route will render here, varia el contenido de la página -->
         <router-view></router-view>
         <div v-html="content_html"></div>
@@ -30,6 +30,7 @@
         <h1 v-if="p_error">Verifica si la propiedad es true con if</h1>
         <h1 v-show="p_error">Verifica si la propiedad es true con show, desaparece con css el elemento</h1>
     </div>
+    <script src="js/components/Lists.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
