--- a/vue/index.html
+++ b/vue/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/vue.js"></script>
@@ -16,19 +17,22 @@
     </style>
 </head>
 <body>
-    <div id="app">
-        <router-link to="/">Home</router-link>
-        <router-link to="/Lists">List</router-link>
-        <!-- component matched by the route will render here, varia el contenido de la página -->
-        <router-view></router-view>
-        <div v-html="content_html"></div>
-        <img v-bind:src="src" :alt="text">
-        {{message}}
-        <p>Computed reversed message: "{{ reversedMessage }}"</p>
-        <p>La suma es: {{ calculatesum(value,3)}}</p>
-        <h1 v-bind:class="{error: p_error, no_error: !p_error}">Esto es un texto</h1>
-        <h1 v-if="p_error">Verifica si la propiedad es true con if</h1>
-        <h1 v-show="p_error">Verifica si la propiedad es true con show, desaparece con css el elemento</h1>
+    <div class="container">
+
+        <div id="app">
+            <router-link to="/">Home</router-link>
+            <router-link to="/Lists">List</router-link>
+            <!-- component matched by the route will render here, varia el contenido de la página -->
+            <router-view></router-view>
+            <div v-html="content_html"></div>
+            <img v-bind:src="src" :alt="text">
+            {{message}}
+            <p>Computed reversed message: "{{ reversedMessage }}"</p>
+            <p>La suma es: {{ calculatesum(value,3)}}</p>
+            <h1 v-bind:class="{error: p_error, no_error: !p_error}">Esto es un texto</h1>
+            <h1 v-if="p_error">Verifica si la propiedad es true con if</h1>
+            <h1 v-show="p_error">Verifica si la propiedad es true con show, desaparece con css el elemento</h1>
+        </div>
     </div>
     <script src="js/components/Lists.js"></script>
     <script src="js/app.js"></script>
