Create a mounted method

--- a/vue/index.html
+++ b/vue/index.html
@@ -25,6 +25,12 @@
             <router-link to="/lists_programming">List programming</router-link>
             <router-link to="/about">About</router-link>
             <router-link to="/otroLink">Otro</router-link>
+            <script type="text/x-template" id="home">
+                <div>
+                    <h1>Home</h1>
+                    <p>Hello &amp welcome</p>    
+                </div>
+            </script>
             <script type="text/x-template" id="about">
                 <div>
                     <h1>About me</h1>
