Change a data information of Slot used v-modal

--- a/vue/index.html
+++ b/vue/index.html
@@ -27,7 +27,14 @@
             <router-link to="/otroLink">Otro</router-link>
 
             <modal-bootstrap>
+                <div slot="header">
+                    <h5 class="modal-title" id="exampleModalLabel">Hola Mundo</h5>   
+                </div>
                 <p>Esto es un contenido para nuestro modal </p>
+                <div slot="footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Enviar</button>  
+                </div>
             </modal-bootstrap>
 
 
