--- a/vue/for.html
+++ b/vue/for.html
@@ -11,6 +11,11 @@
        <ul>
            <li v-for="person in people">{{person}}</li>
        </ul>
+       <ul>
+           <li v-for="(person, index) in people">
+                {{index}} - {{person}}
+            </li>
+       </ul>
     </div>
     <script src="js/app.js"></script>
 </body>
