--- a/vue/events.html
+++ b/vue/events.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="js/vue.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+   
+    
     <title>Vue</title>
 </head>
 <body>
@@ -11,7 +14,7 @@
         <button v-on:click="incrementar">Incrementar</button>
         <button v-on:click="decrementar">Decrementar</button>
         
-        <h1 :style="{color:'blue', fontSize:numero+'px'}">Hola mundo {{numero}}</h1>
+        <h1 :style="{color:'blue', fontSize:numero+'px'}">Hola mundo: {{numero}}</h1>
     </div>
     <script src="js/app.js"></script>
 </body>
