--- a/vue/for.html
+++ b/vue/for.html
@@ -6,7 +6,6 @@
     <script src="js/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <title>Vue</title>
-
 </head>
 <body>
     <div id="app">
@@ -15,11 +14,11 @@
        </ul>
        <ul>
            <li v-for="(person, index) in people">
+               <!--interpolación-->
                 {{index}} - {{person}}
-                <span v-if="index == people.length-1">Este es el ultimo elemento</span>
             </li>
+            <span v-if="index === people.length">person</span>
        </ul>
-       <button v-on:click="filterPeople">Filtra más de 5 caracteres</button>
     </div>
     <script src="js/app.js"></script>
 </body>
