create a filter arrayObjects

--- a/vue/index.html
+++ b/vue/index.html
@@ -22,8 +22,8 @@
 
         <div id="app" v-cloak >
             <router-link to="/">Home</router-link>
-            <router-link to="/lists_person">List person</router-link>
-            <router-link to="/lists_programming">List programming</router-link>
+            <router-link to="/ListsPerson">List person</router-link>
+            <router-link to="/ListsProgramming">List programming</router-link>
             <router-link to="/about">About</router-link>
             <router-link to="/otroLink">Otro</router-link>
 
