--- a/vue/for.html
+++ b/vue/for.html
@@ -29,6 +29,7 @@
                 <span v-if="index == arrayObjects.length - 1">Este es el ultimo elemento</span>
                 </li>
         </ul>
+        <input v-model="filtroEdad" type="text" > 
         <button class="btn btn-primary" v-on:click ="filterPeopleObjects"> Filtrar por edad </button>
 
     </div>
